production/jenkins-exporter/40.Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins-exporter
  namespace: jenkins-exporter
  labels:
    app.kubernetes.io/component: jenkins-exporter
    app.kubernetes.io/name: jenkins-exporter
    prometheus.monitoring/service: jenkins-exporter 
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: jenkins-exporter
      app.kubernetes.io/name: jenkins-exporter
      prometheus.monitoring/service: jenkins-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: jenkins-exporter
        app.kubernetes.io/name: jenkins-exporter
        prometheus.monitoring/service: jenkins-exporter 
    spec:
      volumes:
        - name: jenkins-exporter-storage
          emptyDir: {}
        - name: jenkins-tls
          secret:
              secretName: client-certs
      containers:
        - name: jenkins-exporter
          command:
            - /usr/local/bin/python
            - /usr/src/app/jenkins_exporter.py
            - '--jenkins'
            - 'https://s3.ubuntu.home/jenkins'
          image: s2.ubuntu.home:5000/thirdparty/jenkins_exporter:d9c9ebe
          volumeMounts:
            - mountPath: "/etc/nginx/ssl"
              name: jenkins-tls
              readOnly: true
          ports:
            - name: metrics
              containerPort: 9118
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: jenkins-exporter-storage
              mountPath: /etc/jenkins-exporter
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: jenkins-exporter
      serviceAccount: jenkins-exporter
      securityContext:
        runAsUser: 65534
        runAsNonRoot: true
        fsGroup: 65534
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
