production/jenkins-exporter/60.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-exporter-ingress
  namespace: jenkins-exporter
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  defaultBackend:
    service:
      name: jenkins-exporter
      port:
        number: 80
  rules:
  - host: "jenkins-exporter.k8s.home"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins-exporter
              port:
                number: 80
